src/objects/Apttus_Config2__CustomerPOIssueLog__c.object
<CustomObject>
    <description>Represents an issue found when validating purchase order data</description>
    <fields>
        <fullName>Apttus_Config2__ContextField__c</fullName>
        <description>The API name of the field from purchase order header or the purchase order item for which the issue is logged</description>
        <inlineHelpText>The API name of the field from purchase order header or the purchase order item for which the issue is logged</inlineHelpText>
        <label>Context Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomerPOItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID Of the associated purchase order item</description>
        <inlineHelpText>ID Of the associated purchase order item</inlineHelpText>
        <label>Purchase Order Item</label>
        <referenceTo>Apttus_Config2__CustomerPOItem__c</referenceTo>
        <relationshipLabel>Customer PO Issue Logs</relationshipLabel>
        <relationshipName>CustomerPOIssueLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomerPurchaseOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated purchase order</description>
        <inlineHelpText>ID of the associated purchase order</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>Apttus_Config2__CustomerPurchaseOrder__c</referenceTo>
        <relationshipLabel>Customer PO Issue Logs</relationshipLabel>
        <relationshipName>CustomerPOIssueLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnrichmentRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated data enrichment rule</description>
        <inlineHelpText>ID of the associated data enrichment rule</inlineHelpText>
        <label>Enrichment Rule</label>
        <referenceTo>Apttus_Config2__DataEnrichmentRule__c</referenceTo>
        <relationshipLabel>Issue Logs</relationshipLabel>
        <relationshipName>IssueLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ErrorType__c</fullName>
        <description>The type of issue logged when validation fails. Error will mean that issue needs to be resolved before next process step</description>
        <inlineHelpText>The type of issue logged when validation fails. Error will mean that issue needs to be resolved before next process step</inlineHelpText>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IssueDetails2__c</fullName>
        <description>The details of the issue</description>
        <inlineHelpText>The details of the issue</inlineHelpText>
        <label>Issue Details</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IssueDetails__c</fullName>
        <description>The details of the issue</description>
        <inlineHelpText>The details of the issue</inlineHelpText>
        <label>Issue Details (Deprecated)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ResolutionDate__c</fullName>
        <description>The DateTime when the issue was resolved</description>
        <inlineHelpText>The DateTime when the issue was resolved</inlineHelpText>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Resolution__c</fullName>
        <description>Holds information about the final resolution of the issue</description>
        <inlineHelpText>Holds information about the final resolution of the issue</inlineHelpText>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RulesetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated data enrichment/validation rule set</description>
        <inlineHelpText>ID of the associated data enrichment/validation rule set</inlineHelpText>
        <label>Ruleset</label>
        <referenceTo>Apttus_Config2__DataValidationEnrichmentRuleset__c</referenceTo>
        <relationshipLabel>Issue Logs</relationshipLabel>
        <relationshipName>IssueLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>This is to store current status of the issue</description>
        <inlineHelpText>Indicates the status of the issue</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ValidationRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated data validation rule</description>
        <inlineHelpText>ID of the associated data validation rule</inlineHelpText>
        <label>Validation Rule</label>
        <referenceTo>Apttus_Config2__DataValidationRule__c</referenceTo>
        <relationshipLabel>Issue Logs</relationshipLabel>
        <relationshipName>IssueLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer PO Issue Log</label>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Issue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer PO Issue Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>